# foundation

./: .gitignore  CMakeLists.txt
cpp/error_code/: CMakeLists.txt  final.cpp  step1.cpp  step10.cpp  step11.cpp  step12.cpp  step2.cpp  step3.cpp  step4.cpp  step5.cpp  step6.cpp  step7.cpp  step8.cpp  step9.cpp  tl-expected.hpp
cpp/macro/: CMakeLists.txt  macro.cpp
cpp/pmr/: CMakeLists.txt  fliter.cpp  memory_resource_inspector.h  pmr_01.cpp  pmr_02.cpp  pmr_03.cpp  pmr_04.cpp  pmr_05.cpp  pmr_06.cpp  print.h  ticktock.h  trace_new_delete.cpp  wangshash.h
cpp/tmp/: CMakeLists.txt  static_for.cpp
cpp/warnings/: CMakeLists.txt
